<resources>
    <string name="app_name">AppListadesejos</string>
    <string name="txt_titulo">Aplicativo lista Vip Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do Curso</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
</resources>