<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editsobrenome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrimeiroNome"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_nome_do_curso"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editsobrenome"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/telefonecontato"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="336dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_de_contato"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#0C6CB8"
        android:text="@string/txt_button_limpar"
        app:layout_constraintBottom_toTopOf="@+id/finalizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefonecontato"
        app:layout_constraintVertical_bias="0.833" />

    <Button
        android:id="@+id/salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#0C6CB8"
        android:text="@string/txt_button_salvar"
        app:layout_constraintBottom_toTopOf="@+id/finalizar"
        app:layout_constraintStart_toEndOf="@+id/limpar"
        app:layout_constraintTop_toBottomOf="@+id/telefonecontato"
        app:layout_constraintVertical_bias="0.835" />

    <Button
        android:id="@+id/finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="192dp"
        android:backgroundTint="#0C6CB8"
        android:text="@string/txt_button_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefonecontato"
        app:layout_constraintVertical_bias="0.678" />

</androidx.constraintlayout.widget.ConstraintLayout>